Added features: USERS AND USER LOGIN & AUTHENTICATION

--- a/web/index.html
+++ b/web/index.html
@@ -18,21 +18,27 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Quizzy - Smart Quiz Application">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="quizzy_front">
+  <meta name="apple-mobile-web-app-title" content="Quizzy">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>quizzy_front</title>
+  <title>Quizzy</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Google Sign-in Client ID - השתמש רק באחד -->
+  <meta name="google-signin-client_id" content="1018123200174-moh99pj9llg69o40lrl881lm8v5hbndt.apps.googleusercontent.com">
+
+  <!-- Google Sign-In Script -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
